Speichern der Personen